Add animations to the page items

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!-- THE ABOUT SECTION  -->
       <!-- /////////////////////////////// -->
       <section class="about section-about">
-        <div class="about-box-1">
+        <div class="about-box-1 small-Opaque">
           <h2 class="title">ABOUT US</h2>
           <h1 class="title-sub">Make Your Ideas Concrete, Elegantly</h1>
           <p class="paragraph">
@@ -99,12 +99,12 @@
           <button class="about-box-1-btn">Learn more...</button>
         </div>
         <div class="about-box-2">
-          <div class="img item-1"></div>
-          <div class="item-2">
+          <div class="img item-1 small-Opaque"></div>
+          <div class="item-2 small-Opaque">
             <div class="img item-2--1"></div>
             <div class="img item-2--2"></div>
           </div>
-          <div class="img item-3"></div>
+          <div class="img item-3 small-Opaque"></div>
         </div>
       </section>
 
@@ -113,29 +113,29 @@
       <section id="company">
         <article class="company__stats">
           <ul>
-            <li>
+            <li class="down-Opaque">
               <strong>34</strong><br /><span
                 >loyal clients <br /><ion-icon name="people-outline"></ion-icon
               ></span>
             </li>
-            <li>
+            <li class="down-Opaque">
               <strong>+56</strong><br /><span class="projects">
                 projects <br /><ion-icon name="business-outline"></ion-icon
               ></span>
             </li>
-            <li>
+            <li class="down-Opaque">
               <strong>74</strong><br /><span
                 >Countries <br /><ion-icon name="globe-outline"></ion-icon
               ></span>
             </li>
-            <li>
+            <li class="down-Opaque">
               <strong>$105M</strong><br /><span
                 >Total deals <br /><ion-icon name="cash-outline"></ion-icon
               ></span>
             </li>
           </ul>
         </article>
-        <article class="company__explore">
+        <article class="company__explore small-Opaque">
           <h2>
             See How We Performed More Than <span>56</span> Projects And Majorly
             <span> Contributed</span> On Others.
@@ -146,7 +146,7 @@
       </section>
 
       <section id="projects">
-        <aside>
+        <aside class="down-Opaque-contact">
           <h1>Our Recent Projects</h1>
           <!-- ABSOLUTE POSITIONED LOGO  -->
           <div class="logo">
@@ -157,7 +157,7 @@
             </div>
           </div>
         </aside>
-        <ul class="projects-names">
+        <ul class="projects-names down-Opaque-contact">
           <li data-id="1" class="active-name">
             Große<ion-icon
               name="arrow-forward-outline"
@@ -183,7 +183,7 @@
             ></ion-icon>
           </li>
         </ul>
-        <figure>
+        <figure class="down-Opaque-contact">
           <article id="article-1" class="active-article project-article">
             <address>
               <img src="img/projects-1.jpg" alt="Der Große" />
@@ -262,7 +262,7 @@
       </section>
       <section id="contact">
         <article>
-          <figure>
+          <figure class="down-Opaque-contact">
             <h1>We'd love to hear from you.</h1>
             <div class="art">
               <div class="shape"></div>
@@ -271,7 +271,7 @@
               <div class="shape dashed"></div>
             </div>
           </figure>
-          <form>
+          <form class="down-Opaque-contact">
             <h2>Contact us</h2>
             <div class="contact-group first-name">
               <label for="contact">first name</label>
@@ -326,7 +326,7 @@
       </section>
     </main>
     <footer>
-      <div class="footer">
+      <div class="footer small-Opaque">
         <div class="logo">
           <div class="logo-shape">
             <div class="shape shape-1"></div>
@@ -352,7 +352,9 @@
           </li>
         </ul>
       </div>
-      <p>&#169; Made Passionately by <a href="">Oussama BOUIZGARNE</a></p>
+      <p class="small-Opaque">
+        &#169; Made Passionately by <a href="">Oussama BOUIZGARNE</a>
+      </p>
     </footer>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
